# mixtile-sdk-linux-app-lvgl_demo

./: CMakeLists.txt  main.c  main.h
hal/: evdev.c  hal_drm.c  hal_sdl.c
lv_demo/: CMakeLists.txt  main.c  main.h
lvgl/: lv_port_file.c  lv_port_indev.c
rk_demo/: CMakeLists.txt  S99-rk_demo  local_ip.c  main.c  main.h  ui_resource.h
rk_demo/bt/: bt.c  bt.h
rk_demo/furniture_control/: coffee_machine.c  furniture_control_ui.c  furniture_control_ui.h  icebox_ui.c  icebox_ui.h  player_ui.c  ui_img_coffee_machine_png.c  ui_img_icebox_png.c  ui_img_icebox_tem_png.c  ui_img_player_png.c  ui_img_return_png.c  ui_img_rice_png.c
rk_demo/home/: home_ui.c  home_ui.h  ui_img_home_png.c  ui_img_logo_png.c  ui_img_phone_png.c  ui_img_setting_png.c  ui_img_trello_png.c  ui_img_wifi.c
rk_demo/include/: RkBtBase.h  Rk_wifi.h
rk_demo/intercom_call/: ui_intercom_call.c  ui_rectangle_png.c
rk_demo/intercom_homepage/: security_alarm.c  ui_intercom_homepage.c  ui_intercom_homepage.h
rk_demo/intercom_homepage/video_monitor/: ui_monitor.c
rk_demo/rockit/: audio_client.c  audio_in.c  audio_out.c  audio_server.c  audio_server.h
rk_demo/setting/: about_ui.c  about_ui.h  bt_ui.c  bt_ui.h  display_ui.c  display_ui.h  language_and_date_ui.c  language_and_date_ui.h  setting_ui.c  volume_ui.c  volume_ui.h  wallpaper_ui.c  wallpaper_ui.h  wifi_ui.c  wifi_ui.h
rk_demo/smart_home/: control_ui.c  control_ui.h  info_ui.c  info_ui.h  music_ui.c  music_ui.h  smart_home_ui.c  smart_home_ui.h
rk_demo/video_monitor/: ui_arrow_left.c  ui_arrow_right.c  ui_background_png.c  ui_monitor.c  ui_monitor.h  ui_pause_png.c  ui_round_png.c  ui_webcam_png.c
